cmake_minimum_required(VERSION 3.29)
project(example)

set(CMAKE_C_STANDARD 11)

add_executable(001 helloWorld.c)
add_executable(001a 001a.c)
add_executable(002 002.c)
add_executable(003 003.c)
add_executable(004 004.c)
add_executable(005 005.c)
add_executable(006 006.c)
add_executable(007 007.c)
add_executable(008 008.c)
add_executable(009 009.c)
add_executable(010 010.c)
add_executable(011 011.c)
add_executable(012 012.c)
add_executable(013 013.c)
add_executable(014 014.c)
add_executable(015 015.c)
add_executable(016 016.c)
add_executable(017 017.c)
add_executable(018 018.c)
add_executable(019 019.c)
add_executable(020 020.c)
add_executable(021 021.c)
add_executable(022 022.c)
add_executable(023 023.c)
add_executable(024 024.c)
add_executable(025 025.c)
add_executable(026 026.c)
add_executable(027 027.c)
add_executable(028 028.c)
add_executable(029 029.c)
add_executable(030 030.c)
add_executable(031 031.c)
add_executable(032 032.c)
add_executable(033 033.c)
add_executable(034 034.c)
add_executable(035 035.c)
add_executable(036 036.c)
add_executable(037 037.c)
add_executable(038 038.c)
add_executable(039 039.c)
add_executable(040 040.c)
add_executable(041 041.c)
add_executable(042 042.c)
add_executable(043 043.c)
add_executable(044 044.c)
add_executable(045 045.c)
add_executable(046 046.c)
add_executable(047 047.c)
add_executable(048 048.c)
add_executable(049 049.c)


add_executable(A01a A01a.c)
add_executable(A01b A01b.c)
add_executable(A02 A02.c)
add_executable(A03 A03.c)
add_executable(A04 A04.c)
add_executable(A05 A05.c)
add_executable(A06 A06.c)
add_executable(A07 A07.c)
add_executable(A08 A08.c)
add_executable(A09 A09.c)
add_executable(A10 A10.c)
add_executable(A11a A11a.c)
add_executable(A11b A11b.c)
add_executable(A12 A12.c)
add_executable(A13 A13.c)
add_executable(A14 A14.c)
add_executable(A15 A15.c)
add_executable(A16 A16.c)
add_executable(A17 A17.c)
add_executable(A18 A18.c)
add_executable(A19a A19a.c)
add_executable(A19b A19b.c)
add_executable(A20 A20.c)
add_executable(A21 A21.c)
add_executable(A22 A22.c)
add_executable(A23 A23.c)
add_executable(A24 A24.c)
add_executable(A25 A25.c)
add_executable(A26 A26.c)
add_executable(A27a A27a.c)
add_executable(A27b A27b.c)

add_executable(S01 S01.c)
add_executable(S02 S02.c)
add_executable(S03 S03.c)
add_executable(S04 S04.c)
add_executable(S05 S05.c)

add_executable(playground _playground.c)